fixed vertical overflow scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,9 @@ html {
     overflow-x: hidden;
 }
 
+#root{
+    overflow: hidden;
+}
 
 /* .desktop-nav {} */
 
